--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>My First Repo</title>
 </head>
 <body>
-    
+    <h1> Trying to push codes in github</h1>
+    <p>Code changed</p>
 </body>
 </html>
